# adk-bedrock-samples

./: .gitignore  README.md  requirements.txt
RAG/self-rag/: README.md  pyproject.toml
RAG/self-rag/self_rag/: .env  agent.py  prompts.py
RAG/self-rag/self_rag/shared_lib/: custom_agent.py  retriever.py
codingtest-gen-agent/: pyproject.toml
codingtest-gen-agent/coding_test_generator/: agent.py  prompts.py
codingtest-gen-agent/coding_test_generator/shared_lib/: constants.py
codingtest-gen-agent/coding_test_generator/sub_agents/: __init__.py
codingtest-gen-agent/coding_test_generator/sub_agents/problem_critic/: __init__.py  agent.py  prompts.py
codingtest-gen-agent/coding_test_generator/sub_agents/problem_generator/: __init__.py  agent.py  prompts.py
codingtest-gen-agent/coding_test_generator/sub_agents/problem_generator_loop/: __init__.py  agent.py
codingtest-gen-agent/coding_test_generator/sub_agents/problem_quality_checker/: __init__.py  agent.py  prompts.py
codingtest-gen-agent/coding_test_generator/sub_agents/problem_solver/: __init__.py  agent.py  prompts.py
codingtest-gen-agent/coding_test_generator/sub_agents/test_case_generator/: __init__.py  agent.py  prompts.py
codingtest-gen-agent/coding_test_generator/sub_agents/topic_finder/: __init__.py  agent.py  prompts.py
llm-auditor/: README.md  pyproject.toml  requirements.txt
llm-auditor/llm_auditor/: agent.py
llm-auditor/llm_auditor/sub_agents/critic/: agent.py  prompt.py
llm-auditor/llm_auditor/sub_agents/reviser/: agent.py  prompt.py
stock-analyzer/: pyproject.toml
stock-analyzer/multi_agent_tool_stock_analyist/: agent.py  cli.py
stock-analyzer/multi_agent_tool_stock_analyist/shared_lib/: __init__.py  prompts.py
stock-analyzer/multi_agent_tool_stock_analyist/sub_agents/: __init__.py
stock-analyzer/multi_agent_tool_stock_analyist/sub_agents/news/: __init__.py  (+1 more)
stock-analyzer/stock_analyzer/: agent.py  cli.py
(+55 files in other folders)
